# video-process-manager

./: .gitignore  AGENTS.md  Cargo.toml  README.md  presets.toml  需求文档.md
docs/: build-and-size.md  verification-fix-list.md
docs/releases/: v0.1.0.md
installer/: video-process-manager.iss
scripts/: build-portable.ps1
src/: config.rs  main.rs  process.rs
ui/: main.slint
